--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 	<body>
 		<header>
 			<p class="site-title">Desk</p>
+			<p class="description">
+				A JavaScript-based form validation system with real-time feedback and
+				Tailwind CSS styling.
+			</p>
 		</header>
 		<main>
 			<section id="registration-form">
